[gd_scene load_steps=39 format=3 uid="uid://cuwbod67cijeh"]

[ext_resource type="Script" uid="uid://cvgdk0f2s5cyf" path="res://Sqript/player.gd" id="1_58ae2"]
[ext_resource type="Texture2D" uid="uid://d3cegb2kign8o" path="res://Asset/Char/1 Pink_Monster/Pink_Monster_Idle_4.png" id="1_xa75v"]
[ext_resource type="Texture2D" uid="uid://c45y5iwo4rnau" path="res://Asset/Char/1 Pink_Monster/Pink_Monster_Jump_8.png" id="2_58ae2"]
[ext_resource type="PackedScene" uid="uid://brpi12g27hf8d" path="res://Scene/clone.tscn" id="2_ivevv"]
[ext_resource type="Texture2D" uid="uid://bs0s0alxbskkm" path="res://Asset/Char/1 Pink_Monster/Pink_Monster_Walk_6.png" id="3_ivevv"]
[ext_resource type="Texture2D" uid="uid://tgj311ybh7da" path="res://Asset/Char/1 Pink_Monster/Pink_Monster_Death_8.png" id="3_r6jsd"]
[ext_resource type="AudioStream" uid="uid://cobnh1wilyg4u" path="res://Sounds/Spown.mp3" id="7_p6qlh"]
[ext_resource type="AudioStream" uid="uid://cx8m4bdeqg05b" path="res://Sounds/Despown.mp3" id="8_2sw5t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jx4b7"]
atlas = ExtResource("3_r6jsd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mxbm"]
atlas = ExtResource("3_r6jsd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfp4b"]
atlas = ExtResource("3_r6jsd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jg3e"]
atlas = ExtResource("3_r6jsd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xvy4"]
atlas = ExtResource("3_r6jsd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b881n"]
atlas = ExtResource("3_r6jsd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gnqs"]
atlas = ExtResource("3_r6jsd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1eh6"]
atlas = ExtResource("3_r6jsd")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6jsd"]
atlas = ExtResource("1_xa75v")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qlh"]
atlas = ExtResource("1_xa75v")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sw5t"]
atlas = ExtResource("1_xa75v")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij4jb"]
atlas = ExtResource("1_xa75v")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c68nv"]
atlas = ExtResource("2_58ae2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c31lq"]
atlas = ExtResource("2_58ae2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dof7"]
atlas = ExtResource("2_58ae2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ao7i"]
atlas = ExtResource("2_58ae2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sypm"]
atlas = ExtResource("2_58ae2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn0wv"]
atlas = ExtResource("2_58ae2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqmt2"]
atlas = ExtResource("2_58ae2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c40dt"]
atlas = ExtResource("2_58ae2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgjog"]
atlas = ExtResource("3_ivevv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhccw"]
atlas = ExtResource("3_ivevv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6xm"]
atlas = ExtResource("3_ivevv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sr8w"]
atlas = ExtResource("3_ivevv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vqkc"]
atlas = ExtResource("3_ivevv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uktg4"]
atlas = ExtResource("3_ivevv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j47wa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx4b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mxbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfp4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jg3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xvy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b881n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gnqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1eh6")
}],
"loop": false,
"name": &"Death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6jsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sw5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij4jb")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c68nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c31lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dof7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ao7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sypm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn0wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqmt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c40dt")
}],
"loop": false,
"name": &"Jump",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgjog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhccw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sr8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vqkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uktg4")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx4b7"]
size = Vector2(17, 27)

[sub_resource type="Gradient" id="Gradient_ivevv"]
offsets = PackedFloat32Array(0.1, 0.5933333, 0.81333333)
colors = PackedColorArray(1, 1, 1, 1, 0.06542057, 0.06542057, 0.06542057, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_r6jsd"]
gradient = SubResource("Gradient_ivevv")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_58ae2")
clone_scene = ExtResource("2_ivevv")
clone_offset_x = 16.3
clone_back_offset_x = -36.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.28118682, 0.28118688, 0.2811868, 1)
sprite_frames = SubResource("SpriteFrames_j47wa")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_jx4b7")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 2.5
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_r6jsd")
texture_scale = 5.0

[node name="CloneSpawnRay" type="RayCast2D" parent="."]
target_position = Vector2(9, 0)

[node name="CloneSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_p6qlh")

[node name="CloneRemoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_2sw5t")
